src/test/ui/minus-string.stderr
error[E0600]: cannot apply unary operator `-` to type `std::string::String`
  --> $DIR/minus-string.rs:3:13
   |
LL | fn main() { -"foo".to_string(); }
   |             ^^^^^^^^^^^^^^^^^^ cannot apply unary operator `-`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0600`.
